feat: update for more detail information